| Bug #17917 | SELECT from compressed MyISAM table crashes MySQL server | ||
|---|---|---|---|
| Submitted: | 4 Mar 2006 16:00 | Modified: | 25 Apr 2006 17:45 |
| Reporter: | Victoria Reznichenko | ||
| Status: | Closed | ||
| Category: | Server: MyISAM | Severity: | S2 (Serious) |
| Version: | 4.1.18 | OS: | Linux (linux) |
| Assigned to: | Sergey Vojtovich | Target Version: | |
[4 Mar 2006 16:00]
Victoria Reznichenko
[4 Mar 2006 16:01]
Victoria Reznichenko
mysqld.trace
Attachment: mysqld.trace (application/octet-stream, text), 8.24 KiB.
[4 Mar 2006 16:01]
Victoria Reznichenko
mysqld.trace is attached.
[8 Mar 2006 13:14]
Victoria Reznichenko
I was not able to reproduce server crash on 64-bit box.
[11 Apr 2006 16:37]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4801
[12 Apr 2006 13:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4850
[13 Apr 2006 11:24]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4907
[13 Apr 2006 11:37]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4908
[24 Apr 2006 20:19]
Sergey Vojtovich
Fixed int 4.1.19, 5.0.21, 5.1.10.
[25 Apr 2006 17:45]
MC Brown
Noted in 4.1.19, 5.0.21, 5.1.10 changelogs: Executing <literal>SELECT</literal> on a large table that had been compressed within <command>myisampack</command> could cause a crash. (Bug #17917)
